--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -3,3 +3,14 @@
   width: 90%;
   max-width: 40rem;
 }
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #008080;
+  color: #e6fcfc;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
