--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -1,16 +1,28 @@
+.article {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
 .main {
+  flex-grow: 10;
   margin: 3rem auto;
   width: 90%;
   max-width: 40rem;
 }
+
+.main,
 .footer {
-  position: relative;
-  bottom: 0;
+  flex-shrink: 0;
+}
+
+.footer {
   width: 100%;
   height: 40px;
   background-color: #008080;
   color: #e6fcfc;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
 }
